--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en-US" class="no-js">
 <head>
-        <meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="profile" href="http://gmpg.org/xfn/11">
     <link rel="pingback" href="https://hitekschool.com/xmlrpc.php">
     <meta name='robots' content='index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1' />
 
 	<!-- This site is optimized with the Yoast SEO plugin v19.9 - https://yoast.com/wordpress/plugins/seo/ -->
-	<title>Software QA Training | QA Courses Online - Hitek Computer School</title>
+	<title>Software QA Training | QA Courses Online </title>
 	<meta name="description" content="Hitek Computer School provides training in Software QA and Software Testing. We will teach you all necessary techniques, methodologies and tools you need to know to build a successful career in Software Testing." />
 	<link rel="canonical" href="https://hitekschool.com/" />
 	<meta property="og:locale" content="en_US" />
