update index.html file

--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
 		<title>Online Tech School</title>
 	</head>
 	<body>
-		<header class="technewcomers-header"></header>
+		<header class="technewcomers-header">
+			<div class="tn-logo">
+				<a href="https://technewcomers.com">
+					<img loading="eager" src="https://technewcomers.com/images/logos/tn-low-resolution-logo-color-on-transparent-background.png">
+				</a>
+			</div>
+		</header>
 	</body>
 </html>
