update index.html file

--- a/index.html
+++ b/index.html
@@ -1,15 +1,24 @@
 <!doctype html>
 <html>
 	<head>
-		<title>Online Tech School</title>
+		<title>TN Online Tech School</title>
+		<link rel="stylesheet" href="https://technewcomers.com/css/styles.css">
 	</head>
 	<body>
 		<header class="technewcomers-header">
 			<div class="tn-logo">
 				<a href="https://technewcomers.com">
-					<img loading="eager" src="https://technewcomers.com/images/logos/tn-low-resolution-logo-color-on-transparent-background.png">
+					<img loading="eager" width="150" height="84" src="https://technewcomers.com/images/logos/tn-low-resolution-logo-color-on-transparent-background.png" alt="TN Online">
 				</a>
 			</div>
+			<nav class="top-nav" aria-label="Main">
+				<ul>
+					<il class="menu-item">Courses</il>
+					<il class="menu-item">About</il>
+					<il class="menu-item">FAQ</il>
+					<il class="menu-item">Contacts</il>
+				</ul>
+			</nav>
 		</header>
 	</body>
 </html>
