--- a/index.html
+++ b/index.html
@@ -3,22 +3,24 @@
 	<head>
 		<title>TN Online Tech School</title>
 		<link rel="stylesheet" href="https://technewcomers.com/css/styles.css">
+		<script src="https://cdn.tailwindcss.com"></script>
 	</head>
 	<body>
-		<header class="technewcomers-header">
-			<div class="tn-logo">
+		<header class="flex items-center justify-between technewcomers-header site-header" style="position: relative;">
+			<div class="w-25">
 				<a href="https://technewcomers.com">
-					<img loading="eager" width="150" height="84" src="https://technewcomers.com/images/logos/tn-low-resolution-logo-color-on-transparent-background.png" alt="TN Online">
+					<img loading="eager" width="120" src="https://technewcomers.com/images/logos/tech-newcomers-low-resolution-color-logo.png" alt="TN Online">
 				</a>
 			</div>
 			<nav class="top-nav" aria-label="Main">
-				<ul>
-					<il class="menu-item">Courses</il>
-					<il class="menu-item">About</il>
-					<il class="menu-item">FAQ</il>
-					<il class="menu-item">Contacts</il>
+				<ul style="margin: 0; display: flex; justify-content: center;">
+					<il class="px-2 menu-item">Courses</il>
+					<il class="px-2 menu-item">About</il>
+					<il class="px-2 menu-item">FAQ</il>
+					<il class="px-2 menu-item">Contacts</il>
 				</ul>
 			</nav>
+			<div class="w-10"></div>
 		</header>
 	</body>
 </html>
