--- a/index.html
+++ b/index.html
@@ -2,25 +2,33 @@
 <html>
 	<head>
 		<title>TN Online Tech School</title>
-		<link rel="stylesheet" href="https://technewcomers.com/css/styles.css">
+		<!--<link rel="stylesheet" href="https://technewcomers.com/css/styles.css"> -->
 		<script src="https://cdn.tailwindcss.com"></script>
 	</head>
 	<body>
-		<header class="flex items-center justify-between technewcomers-header site-header" style="position: relative;">
-			<div class="w-25">
-				<a href="https://technewcomers.com">
-					<img loading="eager" width="120" src="https://technewcomers.com/images/logos/tech-newcomers-low-resolution-logo-black-on-white-background.png" alt="TN Online">
-				</a>
+		<header>
+			<nav>
+				<div class="mx-auto max-w-7xl x-4 sm:px-6 lg:px-8 relative z-50 flex justify-between py-8">
+					<div class="relative z-10 flex items-center gap-16">
+						<a aria-label="Home" href="https://technewcomers.com/images/logos/tech-newcomers-low-resolution-logo-black-on-white-background.svg">
+							<svg viewBox="0 0 106 40" aria-hidden="true" class="h-10 w-auto"></svg>
+						</a>
+
+					</div>
+				</div>
+			</nav>
 			</div>
-			<nav class="top-nav" aria-label="Main">
 				<ul style="margin: 0; display: flex; justify-content: center;">
 					<il class="px-2 menu-item">Courses</il>
 					<il class="px-2 menu-item">About</il>
 					<il class="px-2 menu-item">FAQ</il>
 					<il class="px-2 menu-item">Contacts</il>
 				</ul>
-			</nav>
 			<div class="w-10"></div>
 		</header>
+		<div>
+			<button>START TEST</button>
+
+			</div>
 	</body>
 </html>
