--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 			<nav>
 				<div class="mx-auto max-w-7xl x-4 sm:px-6 lg:px-8 relative z-50 flex justify-between py-8">
 					<div class="relative z-10 flex items-center gap-16">
-						<a aria-label="Home" href="https://technewcomers.com/images/logos/tech-newcomers-low-resolution-logo-black-on-white-background.svg">
+						<a aria-label="Home" href="https://technewcomers.com/images/logos/tech-newcomers-low-resolution-logo-black-on-white-background.png">
 							<svg viewBox="0 0 106 40" aria-hidden="true" class="h-10 w-auto"></svg>
 						</a>
-
+						<div class="hidden lg:flex lg-gap-10"></div>
 					</div>
 				</div>
 			</nav>
