--- a/index.html
+++ b/index.html
@@ -12,22 +12,26 @@
 					<div class="relative z-10 flex items-center gap-16">
 						<a aria-label="Home" href="https://technewcomers.com/images/logos/tech-newcomers-low-resolution-logo-black-on-transparent-background.png">
 						</a>
-						<div class="hidden lg:flex lg-gap-10"></div>
+						<div class="hidden lg:flex lg:gap-10">
+							<a class="relative -my-2 -mx-3 rounded-lg px-3 py-2 text-sm text-gray-700 transition-colors delay-150 hover:text-gray-900 hover:delay-[0ms]" href="#Products">
+								<span class="relative z-10 flex items-center gap-16">Products</span>
+							</a>
+							<a class="relative -my-2 -mx-3 rounded-lg px-3 py-2 text-sm text-gray-700 transition-colors delay-150 hover:text-gray-900 hover:delay-[0ms]" href="#About">
+								<span class="relative z-10 flex items-center gap-16">About</span>
+							</a>
+							<a class="relative -my-2 -mx-3 rounded-lg px-3 py-2 text-sm text-gray-700 transition-colors delay-150 hover:text-gray-900 hover:delay-[0ms]" href="#FAQ">
+								<span class="relative z-10 flex items-center gap-16">FAQs</span>
+							</a>
+							<a class="relative -my-2 -mx-3 rounded-lg px-3 py-2 text-sm text-gray-700 transition-colors delay-150 hover:text-gray-900 hover:delay-[0ms]" href="#Contacts">
+								<span class="relative z-10 flex items-center gap-16">Contacts</span>
+							</a>
+						</div>
 					</div>
+					<div class="flex items-center gap-6"></div>
 				</div>
 			</nav>
-			</div>
-				<ul style="margin: 0; display: flex; justify-content: center;">
-					<il class="px-2 menu-item">Courses</il>
-					<il class="px-2 menu-item">About</il>
-					<il class="px-2 menu-item">FAQ</il>
-					<il class="px-2 menu-item">Contacts</il>
-				</ul>
-			<div class="w-10"></div>
-		</header>
 		<div>
 			<button>START TEST</button>
-
-			</div>
+		</div>
 	</body>
 </html>
