--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 					<div class="relative z-10 flex items-center gap-16">
 						<a aria-label="Home" href="https://technewcomers.com/images/logos/tech-newcomers-low-resolution-logo-black-on-transparent-background.png">
 						</a>
+					</div>
+					<div class="relative z-10 flex items-center gap-16">
 						<div class="hidden lg:flex lg:gap-10">
 							<a class="relative -my-2 -mx-3 rounded-lg px-3 py-2 text-sm text-gray-700 transition-colors delay-150 hover:text-gray-900 hover:delay-[0ms]" href="#Products">
 								<span class="relative z-10 flex items-center gap-16">Products</span>
