--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 			<nav>
 				<div class="mx-auto max-w-7xl x-4 sm:px-6 lg:px-8 relative z-50 flex justify-between py-8">
 					<div class="relative z-10 flex items-center gap-16">
-						<a aria-label="Home" href="https://technewcomers.com/images/logos/tech-newcomers-low-resolution-logo-black-on-transparent-background.png">
+						<a aria-label="Home" href="https://technewcomers.com">
+							<img loading="eager" width="120" src="https://technewcomers.com/images/logos/tech-newcomers-low-resolution-logo-black-on-white-background.png" alt="TN Online">
 						</a>
-					</div>
 					<div class="relative z-10 flex items-center gap-16">
 						<div class="hidden lg:flex lg:gap-10">
 							<a class="relative -my-2 -mx-3 rounded-lg px-3 py-2 text-sm text-gray-700 transition-colors delay-150 hover:text-gray-900 hover:delay-[0ms]" href="#Products">
